Fix header text overflow

--- a/app/static/css/forums.css
+++ b/app/static/css/forums.css
@@ -15,6 +15,7 @@
     color: #868686;
     white-space: nowrap;
     font-weight: lighter;
+    overflow: auto;
 }
 
 .forum-home {
